# django-project-boilerplate

./: Dockerfile  README.md  cookiecutter.json  manage.py  sample.env
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: urls.py
{{cookiecutter.project_slug}}/settings/: base.py
{{cookiecutter.root_dir_name}}/: Dockerfile  README.md  manage.py  pyproject.toml  sample.env  start.sh  start_celery.sh  start_celery_beat.sh  uwsgi.ini
{{cookiecutter.root_dir_name}}/{{cookiecutter.project_slug}}/: __init__.py  api_urls.py  asgi.py  celery.py  urls.py  wsgi.py
{{cookiecutter.root_dir_name}}/{{cookiecutter.project_slug}}/settings/: base.py  production.py
