[tool.poetry]
name = "{{cookiecutter.project_name.split()|join('')}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.project_author}} <{{cookiecutter.author_email}}>"]
license = "{{cookiecutter.license}}"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.2"
uwsgi = "^2.0.18"

[tool.poetry.dev-dependencies]
pep8 = "^1.7.1"
autopep8 = "^1.5"
ipython = "^7.11.1"
flake8 = "^3.7.9"
python-language-server = {extras = ["all"], version = "^0.31.7"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
