[tool.poetry]
name = "{{cookiecutter.project_name.split()|join('')}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.project_author}} <{{cookiecutter.author_email}}>"]
license = "{{cookiecutter.license}}"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.0.6"
uwsgi = "^2.0.20"

[tool.poetry.dev-dependencies]
pep8 = "^1.7.1"
autopep8 = "^1.6.0"
ipython = "^8.4.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
