[tool.poetry]
name = "{{cookiecutter.project_name.split()|join('')}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.project_author}} <{{cookiecutter.author_email}}>"]
license = "{{cookiecutter.license}}"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.4"
ipython = "^8.23.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
